--- a/Main.html
+++ b/Main.html
@@ -5,7 +5,9 @@
     <?xml version="1.0" encoding="utf-8"?>
     <link rel="stylesheet" type="text/css" href="CSS.css">
     <link rel="stylesheet" type="text/css" href="modal.css">
-    <script src="http://code.jquery.com/jquery-2.0.2.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+
 </head>
 <body>
 <div class="headerMenu">
@@ -33,41 +35,139 @@
     <svg class="homeImage" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
          viewBox="0 0 1600 1400" preserveAspectRatio="xMidYMid meet">
         <g>
-            <image style="overflow:scroll;" width="1600" height="988" xlink:href="trasert.png" >
+            <image style="overflow:scroll;" width="1600" height="988" xlink:href="trasert.png">
             </image>
         </g>
         <g>
-            <path class="kiwi" id="visitRoomFloor" onclick="javascript:Modal()"  d="M860,555.5c-10.9,12-19.4,34.9-7,50c11.1,13.5,33.4,13.6,46.5,5c22.7-14.9,21.2-57.6,3.5-68
-		        C890.7,535.3,870.8,543.6,860,555.5z"/>
+            <path class="kiwi" id="visitRoomFloor" onclick="Modal()"  d="M798.2,516.1l26.8,0.9c2,0.1,3.7-1.5,3.7-3.6V355.1c0-1.1,0.5-2.2,1.4-2.8l5.3-4c1.2-0.9,2.9-0.9,4.1-0.1
+			l20,13.6c1.2,0.8,2.9,0.8,4.1-0.1l51.9-38.1c0.9-0.7,1.4-1.7,1.4-2.9v-22.4c0-0.7-0.2-1.4-0.6-2l-5.8-8.6c-1-1.5-0.7-3.4,0.6-4.6
+			l27.4-24.6c1.2-1.1,3.1-1.2,4.4-0.2l5.3,3.8c0.1,0.1,0.1,0.1,0.2,0.1l26.5,16.1c2.1,1.3,2.3,4.2,0.5,5.7l-32,27.3
+			c-1,0.8-1.4,2.1-1.2,3.4l1.4,6.9c0.3,1.3-0.2,2.6-1.2,3.4l-15.9,13.1c-0.7,0.6-1.2,1.4-1.3,2.3l-8.2,73c0,0.2,0,0.3,0,0.5
+			l8.2,255.6c0.1,1.9,1.6,3.4,3.6,3.4h39.9c2.1,0,3.7,1.8,3.5,3.9l-1.4,14.2c-0.2,2.1,1.4,3.9,3.5,3.9h1.3c2,0,3.6,1.6,3.6,3.6v18.2
+			c0,2-1.6,3.6-3.6,3.6l0,0c-2.2,0-3.8-1.9-3.5-4.1l1-6.2c0.3-2.1-1.3-4-3.4-4.1l-56.1-1.9c-2-0.1-3.7,1.5-3.7,3.5v9.3
+			c0,2-1.6,3.6-3.6,3.6h-37.7c-2.1,0-3.7-1.7-3.5-3.8l0.6-7.8c0.1-2-1.4-3.8-3.5-3.8l-58.1-1c-2,0-3.6,1.6-3.6,3.6v9.3
+			c0,2-1.6,3.6-3.6,3.6h-1.1c-2,0-3.6-1.6-3.6-3.6v-7.2c0-2-1.6-3.6-3.6-3.6h-3.9c-2,0-3.6-1.6-3.6-3.6v-2.9c0-1.4,0.8-2.7,2.1-3.2
+			l5.7-2.5c1.3-0.6,2.1-1.8,2.1-3.2c1.1-57,2.1-114,3.2-171.1C794.5,517.6,796.2,516,798.2,516.1z"/>
         </g>
     </svg>
+    <!--
     <svg class="gearImage" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
          viewBox="0 0 300 300" preserveAspectRatio="xMidYMid meet">
         <g>
-            <image class="gear" style="overflow:visible;opacity:0.5;" width="300" height="300"
+            <image class="gear" onclick="Gear()" id="gearId" style="overflow:visible;opacity:0.5;" width="300"
+                   height="300"
                    xlink:href="Steam.png" x="0px" y="0px">
             </image>
         </g>
     </svg>
+    -->
 </div>
 <div id="myModal" class="modal">
-
     <!-- Modal content -->
     <div class="modal-content">
         <div class="modal-header">
             <span class="close">×</span>
-            <h2>Modal Header</h2>
+            <h2>Termo Regulator</h2>
         </div>
         <div class="modal-body">
-            <p>Some text in the Modal Body</p>
-            <p>Some other text...</p>
+            <svg class="termoSVG" version="1.1" id="Слой_1"
+	             xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 105 274"
+                 style="enable-background:new 0 0 105 274;" xml:space="preserve">
+                    <style type="text/css">
+	                        .st0 {
+                                fill: rgba(46, 46, 46, 1);
+                                fill: rgba(62, 154, 255, 1);
+                                fill: rgba(62, 110, 211, 0.7);
+                            }
+
+                            .st1 {
+                                filter: url(#Adobe_OpacityMaskFilter);
+                            }
+
+                            .st2 {
+                                mask: url(#XMLID_84_);
+                                fill: none;
+                                stroke: #C1CFD5;
+                                stroke-width: 6;
+                                stroke-miterlimit: 10;
+                            }
+
+</style>
+<switch>
+	<g >
+		<g id="XMLID_4_">
+			<g id="XMLID_24_">
+				<path id="tempCil"  class="st0" d="M65.2,189.5c0-0.2,0-0.3,0-0.5V18.3c0-6.6-5.4-12-12-12h-2.2c-6.6,0-12,5.4-12,12V189
+					c0,0.3,0,0.7,0.1,1c-12.6,5.3-21.5,17.9-21.5,32.5c0,19.5,15.8,35.2,35.2,35.2c19.5,0,35.2-15.8,35.2-35.2
+					C88.1,207.4,78.6,194.5,65.2,189.5z"/>
+                <defs>
+                    <pattern id="pattern"
+                             width="12" height="10"
+                             patternUnits="userSpaceOnUse"
+                             patternTransform="rotate(55 50 50)">
+                        <line stroke="rgba(62, 110, 211, 0.7)" stroke-width="9.5px" y2="10"/>
+                    </pattern>
+                </defs>
+                <g>
+                <path id="tempCilUpp"  fill="rgba(62, 154, 255, 1)" d="M65.2,189.5c0-0.2,0-0.3,0-0.5V18.3c0-6.6-5.4-12-12-12h-2.2c-6.6,0-12,5.4-12,12V189
+					c0,0.3,0,0.7,0.1,1c-12.6,5.3-21.5,17.9-21.5,32.5c0,19.5,15.8,35.2,35.2,35.2c19.5,0,35.2-15.8,35.2-35.2
+					C88.1,207.4,78.6,194.5,65.2,189.5z"/>
+                </g>
+                <g>
+                <path id="tempCilDash"  fill="url(#pattern)" d="M65.2,189.5c0-0.2,0-0.3,0-0.5V108.3c0-6.6-5.4-12-12-12h-2.2c-6.6,0-12,5.4-12,12V189
+					c0,0.3,0,0.7,0.1,1c-12.6,5.3-21.5,17.9-21.5,32.5c0,19.5,15.8,35.2,35.2,35.2c19.5,0,35.2-15.8,35.2-35.2
+					C88.1,207.4,78.6,194.5,65.2,189.5z"/>
+                <!--<rect id="squareDash" fill-rule="evenodd" x="17.6" y="6.3" fill="rgba(62, 154, 255, 0.5)" width="70.5" height="251.4" />
+                    <path id="XMLID_3_" class="st0" d="M53.3,6.3h-2.2c-6.6,0-12,3.8-12,8.5v121c8.7,0,17.5,0,26.2,0v-121
+			C65.3,10.2,59.9,6.3,53.3,6.3z"/>-->
+                </g>
+			</g>
+		</g>
+		<g id="XMLID_1_">
+			<g id="XMLID_101_">
+				<defs>
+					<filter id="Adobe_OpacityMaskFilter" filterUnits="userSpaceOnUse" x="0.4" y="0.2" width="104.1" height="273.6">
+						<feFlood  style="flood-color:white;flood-opacity:1" result="back"/>
+						<feBlend  in="SourceGraphic" in2="back" mode="normal"/>
+					</filter>
+				</defs>
+				<mask maskUnits="userSpaceOnUse" x="0.4" y="0.2" width="104.1" height="273.6" id="XMLID_24_">
+					<g id="XMLID_102_" class="st1">
+
+							<image style="overflow:visible;" width="451" height="1157" id="XMLID_103_" xlink:href="8BF4B507.jpg"  transform="matrix(0.24 0 0 0.24 -1.5528 -1.8191)">
+						</image>
+					</g>
+				</mask>
+				<path id="XMLID_104_" class="st2" d="M94.8,2.3c-4.9,4.9-9.8,9.8-14.8,14.8c0,55,0,110.1,0,165.1c1.5,1,22.8,16.6,21.5,43
+					c-1,21-15.6,33.5-18.1,35.6c-3.6,2.7-13.9,9.7-28.9,10.1c-16.6,0.4-28.1-7.5-31.5-10.1c-2.3-1.7-18.3-14-19.5-35.6
+					c-0.9-17.1,7.9-33.5,22.8-43c0-54.6,0-109.2,0-163.8C20.7,13.1,15.1,7.7,9.6,2.3"/>
+			</g>
+		</g>
+        <g i:extraneous="self">
+		<linearGradient id="XMLID_2_" gradientUnits="userSpaceOnUse" x1="69.4507" y1="97.5821" x2="115.3113" y2="97.5821">
+			<stop  offset="0" style="stop-color:#00AEEF"/>
+			<stop  offset="1" style="stop-color:#00AEEF"/>
+		</linearGradient>
+		<path id="plast" class="st0" d="M77.1,108.2h20.1c3.2,0,5.8-2.6,5.8-5.8v-9.7c0-3.2-2.6-5.8-5.8-5.8H77.1
+			c-3.2,0-5.8,2.6-5.8,5.8c-1.7,1.6-3.3,3.2-5,4.8c1.7,1.6,3.3,3.2,5,4.8C71.3,105.6,73.9,108.2,77.1,108.2z"/>
+        </g>
+        </g>
+	</g>
+</switch>
+
+</svg>
         </div>
         <div class="modal-footer">
-            <h3>Modal Footer</h3>
+            <div class="buttons">
+            <button onclick="Fulling()">Auto</button>
+            <button onclick="Fulling()">On</button>
+            <button onclick="Fulling()">Off</button>
+            </div>
+
         </div>
     </div>
-
 </div>
+<div class="results"></div>
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
